feat : 각 페이지에 카테고리 세팅

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=17ee6c96b4971710e49dbf3faa492cc1"></script>
   </body>
 </html>
